--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^19.2.0",
     "react-datepicker": "^9.0.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.10.1"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.10.1",
+    "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
