--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.26.1",
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
     "react-datepicker": "^9.0.0",
